--- a/src/App.css
+++ b/src/App.css
@@ -1,34 +1,3 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
-
-
-
 .jumbotron {
   height: 100vh;
   width: 100%;
@@ -45,12 +14,12 @@
 
 .jumbotron .inner .brand {
   width: 600px;
-  padding-bottom: 20px;
+  padding-bottom: 10px;
 }
 
 .jumbotron .inner .subtitle {
   font-weight: 200;
-  padding-bottom: 20px;
+  padding-bottom: 30px;
 }
 
 
@@ -63,6 +32,12 @@
   box-shadow: 5px 5px 5px 0 hsla(0, 0%, 0%, 0.2);
   transition: all .1s;
   cursor: pointer;
+  margin: 30px 0 40px;
+}
+
+.btn a {
+  text-decoration: none;
+  color: inherit;
 }
 
 .btn:hover {
@@ -75,14 +50,19 @@
   border-radius: 4px;
   font-size: 30px;
   box-shadow: 0 0 12px 0 hsla(0, 0%, 0%, 0.2);
-  margin-bottom: 20px;
+}
+
+.text {
+  font-weight: 100;
+  font-size: 16px;
+  color: rgba(0,0,0,0.4);
+  padding-top: 5px;
 }
 
 .community {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 40px;
 }
 
 .community a {
